--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                 </div>
               </perfect-scrollbar>
             </div>
-            <div class="d-block text-right card-footer"><button class="mr-2 btn btn-link btn-sm">Cancel</button><button
-                class="btn btn-primary">Add Task</button></div>
+            <div class="d-block text-right card-footer"><button class="mr-2 btn btn-link btn-sm"><a href="/index.html">Cancel</a></button><button
+                class="btn btn-primary"><a href="/taskdetails.html">Add</a></button></div>
           </div>
         </div>
         </div>
