--- a/taskdetails.html
+++ b/taskdetails.html
@@ -3,18 +3,19 @@
     <head>
         <!-- Required meta tags -->
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width">
     
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+      
     <title>Task Details</title>
   </head>
   <body>
-    <h1>Task Details</h1>
+
     <!-- Modal -->
 
-   <div class="m-4">
+   <!-- <div class="m-4">
         <div id="myModal" class="modal fade" tabindex="-1">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -33,10 +34,41 @@
                 </div>
             </div>
         </div>
+    </div> -->
+
+
+
+
+    <!-- Task details -->
+    <div class="container">
+        <h3>Task Details</h3>
+        <br>
+    </div> 
+    <!-- Task box -->
+    <div class="container"></div>  
+    <!-- List group -->
+    <div class="container">
+        <div id="list-example" class="list-group">
+            <textarea  name="" id="" cols="30" rows="10" placeholder="Add details
+Task name
+Description"></textarea>
+            <br>
+            <a class="list-group-item list-group-item-action" href="#list-item-1">Assigned to</a> 
+            <br>
+            <a class="list-group-item list-group-item-action" href="#list-item-2"> Due date</a>
+            <br>
+            <a class="list-group-item list-group-item-action" href="#list-item-3">Status</a>
+            <br>
+            <a class="list-group-item list-group-item-action" href="#list-item-3">Priority</a>
+            <br>      
+
+        </div>
     </div>
-</body>
 
-
+    <!-- Cancel and add buttons -->
+    </div>
+    <div class="d-block text-right card-footer"><button class="mr-2 btn btn-link btn-sm"><a href="/index.html">Cancel</a></button>
+    <button class="btn btn-primary"><a href="/taskdetails.html">Add</a></button></div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
